added logs and comments in insurance coverage